--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <div class="popup hidden overlay">
       <div class="popup__overlay"></div>
       <div class="popup__content">
+        <div class="description">Description</div>
         <button class="delete-event-btn">Delete</button>
       </div>
     </div>
