--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
         <button class="delete-event-btn">Delete</button>
       </div>
     </div>
-    <script src="scripts/index.js" type="module"></script>
+    <script src="./src/scripts/index.js" type="module"></script>
   </body>
 </html>
