--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,15 +28,15 @@
       <button class="button create-event-btn">
         <i class="fas fa-plus create-event-btn__icon"></i>Create
       </button>
-      <div class="navigation">
-        <button data-direction="today" class="navigation__today-btn button">Today</button>
-        <button data-direction="prev" class="icon-button navigation__nav-icon">
+      <div class="nav">
+        <button data-direction="today" class="nav__today-btn button">Today</button>
+        <button data-direction="prev" class="icon-button nav__nav-icon">
           <i data-direction="prev" class="fas fa-chevron-left"></i>
         </button>
-        <button data-direction="next" class="icon-button navigation__nav-icon">
+        <button data-direction="next" class="icon-button nav__nav-icon">
           <i data-direction="next" class="fas fa-chevron-right"></i>
         </button>
-        <span class="navigation__displayed-month">Jun - Jul 2019</span>
+        <span class="nav__displayed-month">Jun - Jul 2019</span>
       </div>
     </header>
     <hr class="header__line" />
